Api integration + router link + category page +crud product

--- a/src/app/pages/admin/categories/categories.component.html
+++ b/src/app/pages/admin/categories/categories.component.html
@@ -1,1 +1,22 @@
-<p>categories works!</p>
+<div class="row">
+  <div class="col-12">
+    <table class="table table-bordered table-striped table-hover">
+      <thead>
+        <tr>
+          <th>Category No</th>
+          <th>Category Name</th>
+          <th>Action</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let item of products$ | async let i = index">
+          <td>{{i+1}}</td>
+          <td>{{item.categoryName}}</td>
+          <td>
+
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
